--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
         유기동물공고를 매일 확인한다.\n
 5. 원점에서 재점검\n  주변을 겉돌거나 같은 지역을 계속 반복하지말고 원점에서 다시 점검한다. 점차 점검지역을 더 확대한다.
     </string>
+    <string name="firebase_notification_channel_id">a</string>
 </resources>
